tests/error/u64_i64_arg.vow
// TEST: stderr "argument has wrong type"
// TEST: error-code TypeMismatch
module U64I64Arg

fn takes_i64(x: i64) -> i64 {
  x
}

fn main() -> i32 {
  let a: u64 = 5;
  let r: i64 = takes_i64(a);
  0
}
